# Talon

./: Cargo.toml
src/: utils.rs
src/tg_handler/: initial_session.rs
src/ui_components/: initializer.rs  keys_ui.rs
src/ui_components/processor/: states.rs  tg_comms.rs
src/ui_components/tab_ui/: blacklist.rs  charts.rs  user_table.rs  whitelist.rs
