[package]
name = "talon-gui"
version = "1.5.0"
edition = "2024"
description = """
On-demand Telegram chat analytic generator
"""
readme = "README.md"
homepage = "https://github.com/TheRustyPickle/Talon"
repository = "https://github.com/TheRustyPickle/Talon"
license = "MIT"
keywords = ["analytics", "data", "egui", "gui", "telegram"]
categories = ["gui"]
exclude = ["/fonts"]

[[bin]]
name = "talon"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
csv = "1.4.0"
dirs = "6.0.0"
eframe = "0.35.0"
egui_extras = { version = "0.35.0", default-features = false, features = [
  "datepicker",
] }
egui_plot = "0.36.0"
egui-selectable-table = { version = "0.7.0", features = ["fuzzy-matching"] }
egui-theme-lerp = "0.6.0"
grammers-client = "=0.7.0"
grammers-crypto = "=0.7.0"
grammers-mtproto = "=0.7.0"
grammers-mtsender = "=0.7.0"
grammers-session = "=0.7.0"
grammers-tl-gen = "=0.7.0"
grammers-tl-types = "=0.7.0"
jiff = "0.2.29"
log = "0.4.33"
nucleo-matcher = "0.3.1"
open = "5.3.5"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.4", features = ["json"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
